fix(slider): should extend responsively on safari and firefox

--- a/src/styles/Slider.module.scss
+++ b/src/styles/Slider.module.scss
@@ -10,6 +10,10 @@
 .sliderHandle {
     height: 100%;
     cursor: pointer;
+    aspect-ratio: 49/462;
+    @media screen and (max-width: $tablet-breakpoint) {
+        aspect-ratio: 27.534/152.32;
+    }
 }
 
 .captionContainer {
@@ -18,6 +22,7 @@
     right: 11%;
     bottom: 0;
     width: 29%;
+    pointer-events: none;
 }
 
 .sliderCaption {
